@@ -3,6 +3,8 @@
 
 Version 8.0.15
 
+  - Fix for Bug#21921956, X DEVAPI: EXPRESSION PARSE ERROR WITH UNARY OPERATOR.
+
   - Fix for Bug#94031 (29257922), WRONG JSON_UNQUOTE WORKAROUND.
 
   - Fix for Bug#22931700, BINDINGS.GETBOOLEAN() ALWAYS RETURNS FALSE.
